welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: value && is not a member of Int
  for ( i<-0 to n-1 && i<=3){
                    ^arrayFront9:3: error: not found: value i
  for ( i<-0 to n-1 && i<=3){
                       ^